[project]
name = "pyvk"
dynamic = ["version"]
description = "VK API for Python"
authors = [
    { name = "Max Kuznetsov", email = "maks.kuznetsov@gmail.com" }
]
dependencies = [
    "appdirs",
    "lxml",
    "requests",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.urls]
Documentation = "https://pyvk.mkuznets.com"
GitHub = "https://github.com/mkuznets/pyvk"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.sdist]
only-include = ["pyvk"]

[tool.rye]
managed = true
dev-dependencies = [
    "mock==5.1.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "coverage<7.0",
    "sphinx==7.2.6",
    "alabaster>=0.7.14",
    "coveralls>=3.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyvk"]
